@@ -709,10 +709,10 @@ diagOdiag <- function(e1,e2) {
 	.diag.2N(e1)
     }
     else { ## result not diagonal, but at least symmetric:
+        ## e.g., m == m
 	isNum <- (is.numeric(r) || is.numeric(r00))
 	isLog <- (is.logical(r) || is.logical(r00))
-
-	Matrix.msg("exploding	<diag>	o  <diag>  into dense matrix")
+        Matrix.msg("exploding <diag> o <diag> into dense matrix", .M.level = 2)
 	d <- e1@Dim
 	n <- d[1]
 	stopifnot(length(r) == n)
